# OpenCV-With-CMake

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
app/: main.cpp
cmake/: Config.cmake  CppStandard.cmake  Dependency.cmake
cmake/doc/: CMakeWorkflow.md  Toolchain.md
config/: config.hpp.in
doc/: 10_SpatialFiltering.md  11_ColorProcessing.md  12_ImageSegmentation.md  13_VideoSegmentation.md  14_MorphologicalOperation.md  15_EdgeDetection.md  16_LineDetection.md  17_FaceDetection.md  18_PedestrianDetection.md  19_Tracking.md  1_Intro.md  20_CameraModel.md  20_CameraModelAndImageTransformation.md  21_ImageFeature.md  21_ImageTransformation.md  2_BasicsOfADigitalImageAndVideo.md  3_BasicsOfColor.md  4_BasicsOfOpenCV.md  4_Mat.md  5_MatOperator.md  5_OpenCVDrawingFunction.md  6_OpenCVDrawingFunction.md  7_MemoryManagementAndPixelAccess.md  8_IntensityTransformation.md  9_HistogramEqualization.md
doc/Extra/: 1_Geometry_Coordinate_System.md  1_VectorCalculus.md  GPUAcceleration.md  HomogeneousCoordinate.md  ImageFormation.md  LazyEvaluation.md  MatrixCalculus.md  VectorCalculus.md
doc/cmake/: CMakeReferences.md  CMakeWorkflow.md  Toolchain.md
doc/extra/: 1_TaylorSeries.md  2_VectorCalculus.md  3_Coordinate_System.md  4_HomogeneousCoordinate.md  5_Transformation.md  6_EquationsOfLinesAndPlanes.md  BitwiseEqual.md  GPUAcceleration.md  LazyEvaluation.md  StaticKeyword.md
shell/: CMakeALL.sh  CMakeBuild.sh  CMakeConfigure.sh  CMakeConfigureAndGenerate.sh  CMakeExecute.sh  CMakeInstall.sh  CMakeMenifest.sh
src/: my_demo_opencv.cpp  my_demo_opencv.hpp
src/chapter10/: CMakeLists.txt  chapter10_headers.h  spatial_blur_filtering.cpp  spatial_blur_filtering.hpp  spatial_emboss_filtering.cpp  spatial_emboss_filtering.hpp  spatial_median_filtering.cpp  spatial_median_filtering.hpp  spatial_sharp_filtering.cpp  spatial_sharp_filtering.hpp
src/chapter11/: CMakeLists.txt  chapter11_headers.h  color_balancing.cpp  color_balancing.hpp  color_histogram.cpp  color_histogram.hpp  pseudo_coloring.cpp  pseudo_coloring.hpp  usage_of_hsl.cpp  usage_of_hsl.hpp
src/chapter12/: CMakeLists.txt  adaptive_thresholding.cpp  adaptive_thresholding.hpp  chapter12_headers.h  global_thresholding.cpp  global_thresholding.hpp
src/chapter13/: CMakeLists.txt  background_subtraction.cpp  background_subtraction.hpp  chapter13_headers.h  contour_counting.cpp  contour_counting.hpp
src/chapter14/: CMakeLists.txt  chapter14_headers.h  erosion_and_dilation.cpp  erosion_and_dilation.hpp  opening_and_closing.cpp  opening_and_closing.hpp
src/chapter15/: CMakeLists.txt  canny_edge_detection.cpp  canny_edge_detection.hpp  chapter15_headers.h  sobel_edge_detection.cpp  sobel_edge_detection.hpp
src/chapter16/: CMakeLists.txt  chapter16_headers.h  line_detection.cpp  line_detection.hpp
src/chapter17/: CMakeLists.txt  chapter17_headers.h  face_detection.cpp  face_detection.hpp
src/chapter18/: CMakeLists.txt  chapter18_headers.h  pedestrian_detection.cpp  pedestrian_detection.hpp
src/chapter19/: CMakeLists.txt  chapter19_headers.h  optical_flow.cpp  optical_flow.hpp  tracking_mean_and_cam_shift.cpp  tracking_mean_and_cam_shift.hpp
src/chapter20/: CMakeLists.txt  chapter20_headers.h  perspective_transformation.cpp  perspective_transformation.hpp
src/chapter21/: CMakeLists.txt  chapter21_headers.h  checkerboard_image_feature.cpp  checkerboard_image_feature.hpp  image_feature_extractor_descriptor.cpp  image_feature_extractor_descriptor.hpp
src/chapter4/: CMakeLists.txt  baisic_data_structure_in_openCV.cpp  baisic_data_structure_in_openCV.hpp  basic_data_structure_in_openCV.cpp  basic_data_structure_in_openCV.hpp  chapter4_headers.h  play_with_video_capture.cpp  play_with_video_capture.hpp  read_a_video_from_a_file.cpp  read_a_video_from_a_file.hpp  read_a_video_from_a_webcam.cpp  read_a_video_from_a_webcam.hpp  read_an_image_in_openCV.cpp  read_an_image_in_openCV.hpp
src/chapter5/: CMakeLists.txt  addition_and_subtraction.cpp  addition_and_subtraction.hpp  chapter5_headers.h  color_space_conversion_cvt.cpp  color_space_conversion_cvt.hpp  extra_matrix_operation.cpp  extra_matrix_operation.hpp  roi_image_mask.cpp  roi_image_mask.hpp  split_and_merge.cpp  split_and_merge.hpp  threshold_operations.cpp  threshold_operations.hpp
src/chapter6/: CMakeLists.txt  chapter6_headers.h  drawing_circle.cpp  drawing_circle.hpp  drawing_line.cpp  drawing_line.hpp  drawing_others.cpp  drawing_others.hpp  drawing_polygon.cpp  drawing_polygon.hpp  drawing_rectangle.cpp  drawing_rectangle.hpp  drawing_text.cpp  drawing_text.hpp
src/chapter7/: CMakeLists.txt  chapter7_headers.h  deepcopy_vs_shallowcopy.cpp  deepcopy_vs_shallowcopy.hpp  pixel_access.cpp  pixel_access.hpp
src/chapter8/: CMakeLists.txt  chapter8_headers.h  gamma_transformation.cpp  gamma_transformation.hpp  log_transformation.cpp  log_transformation.hpp  negative_transformation.cpp  negative_transformation.hpp  piecewise_transformation.cpp  piecewise_transformation.hpp
src/chapter9/: CMakeLists.txt  chapter9_headers.h  drawing_histogram.cpp  drawing_histogram.hpp  histogram_equalization.cpp  histogram_equalization.hpp
